--- a/src/CQRS-ES/CQRS.Core/CQRS.Core.csproj
+++ b/src/CQRS-ES/CQRS.Core/CQRS.Core.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Consumers\" />
+  </ItemGroup>
 </Project>
