--- a/src/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
+++ b/src/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=sa;Password=sa@123456;TrustServerCertificate=True;"
   }
 }
